[tool.poetry]
name = "joycon-io-playground"
version = "0.1.0"
description = ""
authors = ["tgalpha <tanalpha.zhy@gmail.com>"]
readme = "README.md"
packages = [
    { include = "joythm", from = "src" }
]


[tool.poetry.dependencies]
python = "^3.11"
hid = "^1.0.5"
hidapi = "^0.14.0"
kkpyutil = "^1.18.0"
joycon-python = "^0.2.4"
pywin32 = "^306"
pyglm = "^2.7.1"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority  = "default"
